# modern-cmake-template

./: CMakeLists.txt  CMakePresets.json  README.md
component1/: CMakeLists.txt
component1/cmake/: Component1ConfigVersion.cmake.in
component1/include/components/component1/: component1.hpp
component1/source/: component1.cpp
component1/test/: CMakeLists.txt  testcomponent1.cpp
component2/: CMakeLists.txt
component2/cmake/: Component2ConfigVersion.cmake.in
component2/include/components/component2/: component2.hpp
component2/source/: component2.cpp
component2/test/: CMakeLists.txt
component3/: CMakeLists.txt
component3/cmake/: Component2ConfigVersion.cmake.in
component3/source/: component3.cpp
